Start of dynamic event handling

--- a/utt-simple-web3js/src/pages/index.html
+++ b/utt-simple-web3js/src/pages/index.html
@@ -39,6 +39,10 @@
                     <button id="addCandidate" class="btn btn-primary">Add Candidate</button>
                 </div>
                 <hr/>
+                <div class="d-flex justify-content-center">
+                    <button id="voteOpen" class="btn btn-primary">Open voting!</button>
+                </div>
+                <hr/>
                 <div>
                     <label for="candidatesSelect">Select Candidate</label>
                     <select id="candidatesSelect"></select>
